--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,18 @@
+certifi==2021.5.30
+charset-normalizer==2.0.1
+colorama==0.4.4
+decorator==4.4.2
+idna==3.2
+imageio==2.9.0
+imageio-ffmpeg==0.4.4
+moviepy==1.0.3
+numpy==1.21.0
+Pillow==8.3.1
+proglog==0.1.9
 python-dotenv==0.18.0
 pytube==10.9.2
 pytube3==9.6.4
+requests==2.26.0
+tqdm==4.61.2
 typing-extensions==3.10.0.0
+urllib3==1.26.6
